# ecommerce-v2

./: Makefile  conftest.py  docker-compose.yml  new.json  pyproject.toml  pytest.ini
ecommerce/: settings.py  urls.py
ecommerce/dashboard/fixtures/: db_admin_fixture.json
ecommerce/dashboard/test/: test_selenium_deshboard.py
ecommerce/demo/: urls.py  views.py
ecommerce/demo/fixtures/: db_product_attribute_fixture.json
ecommerce/demo/management/commands/: load-fixtures.py
ecommerce/demo/templates/: base.html  category.html  index.html  product_by_category.html  product_detail.html
ecommerce/inventory/: admin.py  documents.py  models.py
ecommerce/inventory/fixtures/: db_product_attribute_value_fixture.json
ecommerce/inventory/migrations/: 0001_initial.py
ecommerce/inventory/tests/: test_db_fixtures.py
ecommerce/tests/: fixture.py  selenium.py
